Node/Backend/backend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  namespace: opendrive
spec:
  to:
    kind: Service
    name: backend
  port:
    targetPort: 8080
